--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 #div-downbar {
     height: 20%;
     position: relative;
-    bottom: 25%;
+    bottom: 20%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -80,7 +80,7 @@ body {
     display: flex;
     flex-direction: row;
     width: 80%;
-    height: 90%;
+    height: 80%;
     /* border: solid 2px black; */
     align-items: center;
 }
@@ -88,7 +88,7 @@ body {
 .timeline {
     width: 20%;
     height: 100%;
-    border: solid 3px black;
+    border: solid 2px black;
     background-color: rgb(255, 255, 255);
     
 }
@@ -141,6 +141,15 @@ body {
     /* Estos tamaños los puse random, especialmente el de altura. Luego toca cambiarlo. */
     width: 100%;
     height: 50%;
+}
+
+#div-timeline {
+    opacity: 0.6;
+    transition: all 0.5s;
+}
+
+#div-timeline:hover {
+    opacity: 1;
 }
 
 .btn-volver {
@@ -265,6 +274,14 @@ body {
     .name-avatar {
         font-size: 1rem;
     }
+
+    .h1-help {
+        font-size: 1.5rem;
+    }
+
+    .desc-help {
+        font-size: 1rem;
+    }
     
   }
 
@@ -298,5 +315,14 @@ body {
     .name-avatar {
         font-size: 1rem;
     }
+
+    .h1-help {
+        font-size: 1.5rem;
+    }
+
+    .desc-help {
+        font-size: 0.8rem;
+    }
+    
     
   }
